--- a/his.html
+++ b/his.html
@@ -5,14 +5,18 @@
 	<link rel="stylesheet" href="https://use.typekit.net/osp0fvo.css">
 	<script src="scripts/script.js"></script>	
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-	<script>
-  	AOS.init();
-	</script>
-
+	
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
 	<link rel="stylesheet" href="https://use.typekit.net/osp0fvo.css">
+
+	
+	<script>
+  	AOS.init();
+	</script>
+
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 </head>
 
@@ -54,33 +58,33 @@
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Sketching and Ideation </span> </p>
-		<div class="pics" style="width: 800px;">
-			<img class="portpics" src="assets/img/his1.png" height ="200px">
-			<img class="portpics" src="assets/img/his2.png" height="200px">
-			<img class="portpics" src="assets/img/his3.png" height="200px">
-			<img class="portpics" src="assets/img/his4.png" height="200px">
-			<img class="portpics" src="assets/img/his5.png" height="200px">
-			<img class="portpics" src="assets/img/logosfinal.png" height ="200px">
-			<img class="portpics" src="assets/img/logosfinal2.png" height="200px">
+		<div class="pics" id="his" style="width: 800px;" >
+			<img class="portpics" src="assets/img/his1.png" height ="200px" >
+			<img class="portpics" src="assets/img/his2.png" height="200px" >
+			<img class="portpics" src="assets/img/his3.png" height="200px" >
+			<img class="portpics" src="assets/img/his4.png" height="200px" >
+			<img class="portpics" src="assets/img/his5.png" height="200px" >
+			<img class="portpics" src="assets/img/logosfinal.png" height ="200px" data-aos="fade-up" >
+			<img class="portpics" src="assets/img/logosfinal2.png" height="200px"  data-aos="fade-up">
 			<p class="description_txt_1"> I wanted His Pills to have bold and playful branding, without presenting a hyper-masculine tone through the font or color palette. I explored multiple different color palettes and logo designs to sucessfully convey this brand as one that pushes healthcare boundaries and appeals to men without conforming to gender stereotypes. </p>
 		</div>
 		
 		<p class="description_txt"> <span class= "boldwrd"> Logo Design and Color Palette </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/logosfinal3.png" height="200px">
+			<img class="portpics" src="assets/img/logosfinal3.png" height="200px" data-aos="fade-up">
 			<p class="description_txt_1"> I was torn between using a clean, bold, sans serif font, but I chose to use this script font, Cabazon, because it achieved the strength and playful tone that I envisioned for this brand. Just using a lower case "H" rather than "His" helped with readability and simplicity. I used a deep navy, red-orange, and a nude peach color palette because both the navy and red were bold colors that the nude helped to balance out. I also enjoyed how this palette was strong and saturated without being overtly masculine.  </p> 
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Packaging </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/mock4.jpg" width="500px">
-			<img class="portpics" src="assets/img/mock6.png"width="500px" >
+			<img class="portpics" src="assets/img/mock4.jpg" width="500px" data-aos="fade-up" >
+			<img class="portpics" src="assets/img/mock6.png"width="500px" data-aos="fade-up" >
 			<p class="description_txt_1"> Packaging for the pill boxes, each containing 32 tablets for the month.</p> 
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Website </span> </p>
 		<div class="pics">
-			<video width="500px"  preload controls autoplay loop muted="true" style="margin-bottom: 20px;">
+			<video width="500px"  preload controls autoplay loop muted="true" style="margin-bottom: 20px;" data-aos="fade-up">
 				<source src="assets/img/website.mp4" type="video/mp4">
 			</video>
 			<p class="description_txt_1"> Wireframe for the company's website, includes information and help about the pill. </p> 
@@ -88,42 +92,42 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Official Branding Guidelines </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/hisfinal-04.png" width="400px" >
+			<img class="portpics" src="assets/img/hisfinal-04.png" width="400px" data-aos="fade-up" >
 			
 		</div>
 
 
 		<p class="description_txt"> <span class= "boldwrd"> Posters </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/poster1.png" width ="300px" > 
-			<img class="portpics" src="assets/img/poster2.png" width ="300px" >
-			<img class="portpics" src="assets/img/poster3.png" width="300px" >
-			<img class="portpics" src="assets/img/poster4.png" width="300px" >
-			<img class="portpics" src="assets/img/poster5.png" width ="300px" >
-			<img class="portpics" src="assets/img/poster6.png" width ="300px" >
+			<img class="portpics" src="assets/img/poster1.png" width ="300px" data-aos="fade-up" > 
+			<img class="portpics" src="assets/img/poster2.png" width ="300px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/poster3.png" width="300px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/poster4.png" width="300px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/poster5.png" width ="300px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/poster6.png" width ="300px" data-aos="fade-up">
 			<p class="description_txt_1"> I created posters to advertise the brand in public spaces. I used bold typography and suggestive imagery to draw attention towards the posters, and to highlight this brands mission of providing a safe and alternative method of birth control. His Pills was designed to not only reinforce that birth control is a shared responsibility, but to also normalize conversations around sex and sex education. I felt that using more suggestive imagery and color pallettes would be an effective way to raise these important conversations. I also am aware that a male birth control pill is designed for mainly heterosexual relationships as its purpose is to prevent pregnancy, and that condoms are still the most effective way to prevent against STI's, so I wanted to make this disclaimer on the posters.  </p> 
 		</div>
 		
 		<p class="description_txt"> <span class= "boldwrd"> Business Cards </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/buscards1.png" height="200px" >
-			<img class="portpics" src="assets/img/buscards2.png" height="200px" >
-			<img class="portpics" src="assets/img/buscards5.png" height="200px" >
-			<img class="portpics" src="assets/img/buscards6.png" height="200px" >
-			<img class="portpics" src="assets/img/buscards3.png" height="200px" >
-			<img class="portpics" src="assets/img/buscards4.png" height="200px" >
+			<img class="portpics" src="assets/img/buscards1.png" height="200px"data-aos="fade-up" >
+			<img class="portpics" src="assets/img/buscards2.png" height="200px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/buscards5.png" height="200px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/buscards6.png" height="200px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/buscards3.png" height="200px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/buscards4.png" height="200px" data-aos="fade-up">
 			<p class="description_txt_1"> I created three business cards that each used one color from the palette, and I paired the logo with Gopher. In order to maintain cohesion among the posters, I used the same line drawing and "wavy" type. These business cards are simple and cohesive with the other assets.  </p> 
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Products </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/posterfinalmock1.png" width="350px" >
-			<img class="portpics" src="assets/img/posterfinalmock2.png" width="350px" >
-			<img class="portpics" src="assets/img/posterfinalmock3.png" width="350px" >
-			<img class="portpics" src="assets/img/mock5.jpg" width="350px" >
-			<img class="portpics" src="assets/img/posterfinalmock4.png" height="400px" >
-			<img class="portpics" src="assets/img/mock1.jpg" height="400px" >
-			<img class="portpics" src="assets/img/mock2.jpg" height="400px" >
+			<img class="portpics" src="assets/img/posterfinalmock1.png" width="350px"data-aos="fade-up" >
+			<img class="portpics" src="assets/img/posterfinalmock2.png" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/posterfinalmock3.png" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/mock5.jpg" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/posterfinalmock4.png" height="400px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/mock1.jpg" height="400px" data-aos="fade-up" >
+			<img class="portpics" src="assets/img/mock2.jpg" height="400px" data-aos="fade-up">
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Reflection </span> </p>
@@ -148,6 +152,15 @@
 	</div>
 </div>
 
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+    	offset: 30, // offset (in px) from the original trigger point
+        delay: 0, // values from 0 to 3000, with step 50ms
+        duration: 1000, // values from 0 to 3000, with step 50ms
+        
+    });
+  </script>
 
 </body>
 
