--- a/graphics.html
+++ b/graphics.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
 	
@@ -45,21 +46,21 @@
 		</div>
 
 		<div class="pics_graphics" >
-			<img class="portpics" id="graph" src="assets/img/info5-02.png" width="400px">
-			<img class="portpics" id="graph" src="assets/img/info-03.png" width="400px">
-			<img class="portpics" id="graph" src="assets/img/sango.png" width="500px">
-			<img class="portpics" id="graph" src="assets/img/bauhaus.png" width="350px">
-			<img class="portpics" id="graph" src="assets/img/sf.png" width="350px">
-			<img class="portpics" id="graph" src="assets/img/bauhaus2.png" width="300px">
-			<img class="portpics" id="graph" src="assets/img/bauhaus3.png" width="300px" height="300px">
-			<img class="portpics" id="graph" src="assets/img/misc-01.png" width="400px">
-			<img class="portpics" id="graph" src="assets/img/earth-07.png" width="400px">
-			<img class="portpics" id="graph" src="assets/img/tally2-01.png" width="400px">
-			<img class="portpics" id="graph" src="assets/img/meagain-01.png" width="400px">
-			<img class="portpics" id="graph" src="assets/img/me-02.png" width="400px">
-			<img class="portpics" id="graph" src="assets/img/reese.png" width="400px">
-			<img class="portpics" id="graph" src="assets/img/bamfest1.png" width="400px">
-			<img class="portpics" id="graph" src="assets/img/bamfest3.jpg" width="400px">
+			<img class="portpics" id="graph" src="assets/img/info5-02.png" width="400px" >
+			<img class="portpics" id="graph" src="assets/img/info-03.png" width="400px" >
+			<img class="portpics" id="graph" src="assets/img/sango.png" width="500px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/bauhaus.png" width="350px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/sf.png" width="350px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/bauhaus2.png" width="300px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/bauhaus3.png" width="300px" height="300px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/misc-01.png" width="400px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/earth-07.png" width="400px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/tally2-01.png" width="400px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/meagain-01.png" width="400px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/me-02.png" width="400px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/reese.png" width="400px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/bamfest1.png" width="400px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/bamfest3.jpg" width="400px" data-aos="fade-up">
 			
 		</div>
 
@@ -77,6 +78,16 @@
 	</div>
 </div>
 
-
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+    	offset: 30, // offset (in px) from the original trigger point
+        delay: 0, // values from 0 to 3000, with step 50ms
+        duration: 1000, // values from 0 to 3000, with step 50ms
+        
+    });
+  </script>
 </body>
 </html>
+
+
