--- a/light.html
+++ b/light.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
 	
@@ -47,33 +48,33 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Cardboard prototype: </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/card1.png" width="350px">
-			<img class="portpics" src="assets/img/card2.png" width="350px">
+			<img class="portpics" src="assets/img/card1.png" width="350px" >
+			<img class="portpics" src="assets/img/card2.png" width="350px" >
 			<p class="description_txt_1"> Our initial idea for this project was to create movement through rotating the outer planetary gears. We envisioned using a rubber tread around the gears and motorizing the central gear in order to create movement. We believed that the triangular shape would work best because it would be light, stable, and fast. </p>
 		</div>
 		
 		<p class="description_txt"> <span class= "boldwrd"> Motorized chassis prototype: </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/motor1.png" height="300">
-			<video class="portpics" width="650" preload controls autoplay loop muted="true">
+			<img class="portpics" src="assets/img/motor1.png" height="300" data-aos="fade-up">
+			<video class="portpics" width="650" preload controls autoplay loop muted="true" data-aos="fade-up">
 				<source src="assets/img/final1.mp4">
 			</video>
 			<p class="description_txt_1"> Following our initial cardboard prototype, we laser cut .25” plywood and attached our motor to the center gear, which was used to spin the outer gears. We used a gear piece from another commercial motororized chassis, and replicated this gear by laser cutting and stacking the plywood to get a perfect fit. For the body of the prototype, we cut multiple slots out so we could find the best fit and placement for the BLE feather and batteries. </p>
 		</div>
 
 		<div class="pics">
-			<img class="portpics" src="assets/img/ai1.png" height="300px">
-			<img class="portpics" src="assets/img/ai2.png" height="300px">
+			<img class="portpics" src="assets/img/ai1.png" height="300px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/ai2.png" height="300px" data-aos="fade-up">
 			<p class="description_txt_1"> Adobe Illustrator files used for the wooden prototype and final chassis. </p>
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Final prototype: </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/final1.png" width="350px">
-			<img class="portpics" src="assets/img/final2.png" width="350px">
+			<img class="portpics" src="assets/img/final1.png" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/final2.png" width="350px" data-aos="fade-up">
 			<p class="description_txt_1"> We 3D printed wheels and treads using flex, and made the rest of the body using clear acrylic. It took multiple adjustments to find the perfect fit for the wheels and tread, by making sure there was not too much or too little slack. We made the top hole adjustable so we could slide the wheels on and off, and created washers to support the wheels onto the body. Using the same motors and BLE feather, we assembled the rest of the body similar to the wooden prototype, and we made cases for each of the components with easy access to switch them in and out. </p>
-			<img class="portpics" src="assets/img/light.JPG" width="400px">
-			<video class="portpics" width="650"  preload controls autoplay loop muted="true">
+			<img class="portpics" src="assets/img/light.JPG" width="400px" data-aos="fade-up">
+			<video class="portpics" width="650"  preload controls autoplay loop muted="true" data-aos="fade-up">
 				<source src="assets/img/final.mp4">
 			</video>
 
@@ -98,6 +99,15 @@
 		</div>
 	</div>
 </div>
-
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+    	offset: 30, // offset (in px) from the original trigger point
+        delay: 0, // values from 0 to 3000, with step 50ms
+        duration: 1000, // values from 0 to 3000, with step 50ms
+        
+    });
+  </script>
 </body>
 </html>
+
