--- a/misc.html
+++ b/misc.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
 	
@@ -50,12 +51,12 @@
 		</p>
 
 		<div class="pics">
-			<img class="portpics" src="assets/img/i26-1.png" width="350px">
-			<img class="portpics" src="assets/img/i26-2.png" width="350px">
-			<img class="portpics" src="assets/img/i26-3.png" width="350px">
-			<img class="portpics" src="assets/img/i26-4.png" width="350px">
-			<img class="portpics" src="assets/img/i26-5.png" width="350px">
-			<img class="portpics" src="assets/img/i26-6.png" width="350px">
+			<img class="portpics" src="assets/img/i26-1.png" width="350px" >
+			<img class="portpics" src="assets/img/i26-2.png" width="350px" >
+			<img class="portpics" src="assets/img/i26-3.png" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/i26-4.png" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/i26-5.png" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/i26-6.png" width="350px" data-aos="fade-up">
 			
 	
 		</div>	
@@ -65,12 +66,12 @@
 		</p>
 
 		<div class="pics">
-			<img class="portpics" src="assets/img/re-1.png" width="350px">
-			<img class="portpics" src="assets/img/re-2.png" width="350px">
-			<img class="portpics" src="assets/img/re-3.png" width="350px">
-			<img class="portpics" src="assets/img/re-4.png" width="350px">
-			<img class="portpics" src="assets/img/re-5.png" width="350px">
-			<img class="portpics" src="assets/img/re-6.png" width="350px">
+			<img class="portpics" src="assets/img/re-1.png" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/re-2.png" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/re-3.png" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/re-4.png" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/re-5.png" width="350px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/re-6.png" width="350px" data-aos="fade-up">
 			
 	
 		</div>
@@ -80,20 +81,20 @@
 		<p class="description_txt" style="margin-top: 0%;"> An exploration into feminine energy and self reflection. View more images <a href="http://www.baremagazine.org/mine" target="blank"> here.</a>
 		</p>	
 		<div class="pics">
-			<img class="portpics" src="assets/img/p7.JPG" width="500px">
-			<img class="portpics" src="assets/img/p11.jpg" width="500px">
-			<img class="portpics" src="assets/img/dre1.jpg" width="550px">
+			<img class="portpics" src="assets/img/p7.JPG" width="500px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/p11.jpg" width="500px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/dre1.jpg" width="550px" data-aos="fade-up">
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Saturn Song </span> </p>
 		<p class="description_txt" style="margin-top: 0%;"> Playing with angles, landscape, and props.
 		</p>	
 		<div class="pics">
-			<img class="portpics" src="assets/img/p3.jpg" width="300px">
-			<img class="portpics" src="assets/img/p4.jpg" width="300px">
-			<img class="portpics" src="assets/img/p2.jpg" width="500px">
-			<img class="portpics" src="assets/img/p1.jpg" width="500px">
-			<img class="portpics" src="assets/img/p9.jpg" width="200px">
+			<img class="portpics" src="assets/img/p3.jpg" width="300px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/p4.jpg" width="300px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/p2.jpg" width="500px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/p1.jpg" width="500px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/p9.jpg" width="200px" data-aos="fade-up">
 			
 		</div>	
 
@@ -102,9 +103,9 @@
 		<p class="description_txt" style="margin-top: 0%;"> Embracing the beauty of Indian culture and the complexities that first-generation children experience with their identity. 
 		</p>	
 		<div class="pics">
-			<img class="portpics" src="assets/img/p5.jpg" width="550px">
-			<img class="portpics" src="assets/img/p6.jpg" width="550px">
-			<img class="portpics" src="assets/img/milly2.jpg" width="550px">
+			<img class="portpics" src="assets/img/p5.jpg" width="550px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/p6.jpg" width="550px" data-aos="fade-up">
+			<img class="portpics" src="assets/img/milly2.jpg" width="550px" data-aos="fade-up">
 
 			
 			
@@ -123,6 +124,17 @@
 	</div>
 </div>
 
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+    	offset: 30, // offset (in px) from the original trigger point
+        delay: 0, // values from 0 to 3000, with step 50ms
+        duration: 1000, // values from 0 to 3000, with step 50ms
+        
+    });
+  </script>
 
 </body>
 </html>
+
+
