--- a/exhale.html
+++ b/exhale.html
@@ -58,7 +58,7 @@
 				<source src="assets/img/exhale.mp4">
 			</video>
 			</a>
-			<p class="description_txt_1"> Instead of using a cirle, I used three.js - a JavaScript 3D library- to create a 3D sphere that I scaled using a sine function, in order to best replicate the breath. I decided to keep "inhale" and "exhale" on the sides of the sphere rather than inside the sphere to make the movement cleaner and less distracting for the user. I also used a purple to blue gradient in order to foster calmness and serenity. </p>
+			<p class="description_txt_1"> Instead of using a cirle and with help from Reese Gyllenhammer, I used three.js - a JavaScript 3D library - to create a 3D sphere that we scaled using a sine function, in order to best replicate the breath. I decided to keep "inhale" and "exhale" on the sides of the sphere rather than inside the sphere to make the movement cleaner and less distracting for the user. I also used a purple to blue gradient in order to foster calmness and serenity. </p>
 		</div>
 
 		
