--- a/graphics.html
+++ b/graphics.html
@@ -48,6 +48,9 @@
 		<div class="pics_graphics" >
 			<img class="portpics" id="graph" src="assets/img/info5-02.png" width="400px" >
 			<img class="portpics" id="graph" src="assets/img/info-03.png" width="400px" >
+			<img class="portpics" id="graph" src="assets/img/barespecial2.png" width="250px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/barespecial1.png" width="250px" data-aos="fade-up">
+			<img class="portpics" id="graph" src="assets/img/barespecial3.png" width="250px" data-aos="fade-up">
 			<img class="portpics" id="graph" src="assets/img/sango.png" width="500px" data-aos="fade-up">
 			<img class="portpics" id="graph" src="assets/img/bauhaus.png" width="350px" data-aos="fade-up">
 			<img class="portpics" id="graph" src="assets/img/sf.png" width="350px" data-aos="fade-up">
