--- a/exhale.html
+++ b/exhale.html
@@ -25,7 +25,7 @@
 					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 					<a href = "misc.html" class="sidebar_item"> BARE </a>
 					<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
-					<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+					<a href = "papaya.html" class="sidebar_item"> Papaya </a>
 					<a href = "graphics.html" class="sidebar_item"> Graphics </a>	
 					
 				</div>
@@ -53,12 +53,12 @@
 		
 		<p class="description_txt"> <span class= "boldwrd"> Website: </span> </p>
 		<div class="pics">
-			<a href="https://anissarashid.github.io/exhale/">
+			<a href="https://anissarashid.github.io/exhale/" target="_blank">
 			<video class="portpics" width="700" preload controls autoplay loop muted data-aos="fade-up" >
 				<source src="assets/img/exhale.mp4">
 			</video>
 			</a>
-			<p class="description_txt_1"> Instead of using a cirle and with help from Reese Gyllenhammer, I used three.js - a JavaScript 3D library - to create a 3D sphere that we scaled using a sine function, in order to best replicate the breath. I decided to keep "inhale" and "exhale" on the sides of the sphere rather than inside the sphere to make the movement cleaner and less distracting for the user. I also used a purple to blue gradient in order to foster calmness and serenity. </p>
+			<p class="description_txt_1"> I used three.js - a JavaScript 3D library - to create 3D objects that were scaled using a sine function, in order to best replicate the breath. Check out the full project on github <a href="https://github.com/anissarashid/exhale" target="_blank" > here.</a> </p>
 		</div>
 
 		
