--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
 					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 					<a href = "misc.html" class="sidebar_item"> BARE </a>
 					<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
-					<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
-					<a href = "light.html" class="sidebar_item"> Graphics </a>	
+					<a href = "papaya.html" class="sidebar_item"> Papaya </a>
+					<a href = "graphics.html" class="sidebar_item"> Graphics </a>	
 					
 				</div>
 				
@@ -52,11 +52,11 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 	</div>
 	<div class="picss">
-		<p class="description_txt" style="margin-top: 0;"> Hello! My name is Anissa (she/her) and I'm currently studying Data Science and Economics at UC Berkeley. I'm an aspiring designer and believe in building research-driven and community-based experiences. I'm also passionate about visually sharing stories and representing my communities throughout my creative work.
+		<p class="description_txt" style="margin-top: 0;"> Hello! My name is Anissa (she/her) and I'm currently studying Data Science and Economics at UC Berkeley. I'm an aspiring designer and believe in building research-driven and community-based experiences.
 
-		 <br><br> My education has given me a multidisciplinary foundation in statistics, programming, and economics, while also granting me the freedom to explore design. I've always been a creatively inclined person, leaning towards art and photography as forms of expression, and I've found design to be the optimal intersection between my technical and creative interests. Through coursework, student organizations, and personal projects, I've been able to gain experience in visual design, branding, creative direction, and physical prototyping. 
+		 <br><br> My education has given me a multidisciplinary foundation in statistics, programming, and economics, while also granting me the freedom to explore design. I've always been a creatively inclined person, leaning towards art and <a href="http://www.baremagazine.org/mine" target="_blank"> photography</a> a form of expression and as a way to represent my communities. After taking my first <a href="az.html" target="_blank" > web design course,</a> I've found design to be the optimal intersection between my technical and creative interests. Through coursework, student organizations, and personal projects, I've been able to gain experience in visual design, branding, creative direction, and product design. 
 
-		<br><br> In my free time, I enjoy brewing coffee, taking care of my house plants, and finding new music via the Spotify related artists tab. I'm always looking for opportunities to grow and develop as a designer, if any of the above is of interest please feel free to reach out to me at <a href="mailto: anissarashid@berkeley.edu"> anissarashid@berkeley.edu! </a>
+		<br><br> In my free time, I enjoy brewing coffee, taking care of my house plants, and finding new music via the <a href="https://open.spotify.com/user/anissarashid?si=TwCAnM2VQwqsE9DBxpDFXA" target="_blank"> Spotify </a> related artists tab. I'm always looking for opportunities to grow and develop as a designer, if any of the above is of interest please feel free to reach out to me at <a href="mailto: anissarashid@berkeley.edu"> anissarashid@berkeley.edu! </a>
 		
 		<br><br><a href = "assets/img/anissarashid_resume.pdf" target="_blank"> <span style="font-weight: bold; font-size: 20px; color: #b51414"> Resume </span></a>
 
