--- a/misc.html
+++ b/misc.html
@@ -25,7 +25,7 @@
 					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 					<a href = "misc.html" class="sidebar_item"> BARE </a>
 					<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
-					<a href = "az.html" class="sidebar_item"> AZ Lyrics </a>
+					<a href = "papaya.html" class="sidebar_item"> Papaya </a>
 					<a href = "graphics.html" class="sidebar_item"> Graphics </a>	
 					
 				</div>
