--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 				
 			</div>	
 			<a href = "contact.html" class="contact" style="color: #b51414"> About </a>
-			<a href = "assets/img/anissarashid_resume.pdf" class="contactt" style="color: #b51414" target="_blank"> Resume </a>
+			<a href = "resume.html" class="contactt" style="color: #b51414" > Resume </a>
 		</div>
 	</div>
 
