--- a/exhale.html
+++ b/exhale.html
@@ -32,7 +32,7 @@
 				
 			</div>	
 			<a href = "contact.html" class="contact"> About </a>
-			<a href = "assets/img/anissarashid_resume.pdf" class="contactt" target="_blank"> Resume </a>
+			<a href = "resume.html" class="contactt" > Resume </a>
 		</div>
 	</div>
 
