--- a/contact.html
+++ b/contact.html
@@ -11,16 +11,17 @@
 
 </head>
 <body >
+
 	<div class="menu">
 		<a href= "index.html" class="name"> 
 		<img id = "logo" src="assets/img/logored.png" height="80px" width="80px" >
-		<img id = "logo2" src="assets/img/logored.png" height="80px" width="80px" > </a>
+		<img id = "logo2" src="assets/img/logoblack.png" height="80px" width="80px" > </a>
 		<div class="menucontents">	
 			<div class="box">
-				<div class="col1" >
-					<a href="index.html" class="side" style="color: #b51414"> Work </a>
+				<div class="col1">
+					<a href="index.html" class="side"  style="color: #b51414"> Work </a>
 				</div>
-				<div id="col2">
+				<div class="col2">
 					<a href = "his.html" class="sidebar_item"> His Pills </a>	
 					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 					<a href = "misc.html" class="sidebar_item"> BARE </a>
@@ -31,43 +32,45 @@
 				</div>
 				
 			</div>	
-			<a href = "contact.html" class="contact" style="color: #b51414"> About </a>
-			<a href = "resume.html" class="contactt" style="color: #b51414" > Resume </a>
+			<div class="box1">
+				<a href = "contact.html" class="contact"  style="color: #b51414"> About </a>
+				<a href = "resume.html" class="contact"   style="color: #b51414"> Resume </a>	
+			</div>
+			
+		</div>
+	</div>
+	
+	<div class="pagecont" id = "abt">
+	<div class="container" id = "abt" style="max-width: 1000px;">
+		
+
+	<div class="thumbs_wrapper" id="about" >
+		<div class="picss" id = "contact">
+			<img class="contactpic" src="assets/img/pfp2.png" width ="300px" > 
+			<h1 class="ml6">
+			  <span class="text-wrapper">
+			    <span class="letters">welcome!</span>
+			  </span>
+			</h1>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+		</div>
+		<div class="picss" id = "contact">
+			<p class="description_txt" style="margin-top: 0;"> Hello! My name is Anissa (she/her) and I'm currently studying Data Science and Economics at UC Berkeley. I'm an aspiring designer and believe in building research-driven and community-based experiences.
+
+			 <br><br> My education has given me a multidisciplinary foundation in statistics, programming, and economics, while also granting me the freedom to explore design. I've always been a creatively inclined person, leaning towards art and <a href="http://www.baremagazine.org/mine" target="_blank"> photography</a> a form of expression and as a way to represent my communities. After taking my first <a href="az.html" target="_blank" > web design course,</a> I've found design to be the optimal intersection between my technical and creative interests. Through coursework, student organizations, and personal projects, I've been able to gain experience in visual design, branding, creative direction, and product design. 
+
+			<br><br> In my free time, I enjoy brewing coffee, taking care of my house plants, and finding new music via the <a href="https://open.spotify.com/user/anissarashid?si=TwCAnM2VQwqsE9DBxpDFXA" target="_blank"> Spotify </a> related artists tab. I'm always looking for opportunities to grow and develop as a designer, if any of the above is of interest please feel free to reach out to me at <a href="mailto: anissarashid@berkeley.edu"> anissarashid@berkeley.edu! </a>
+			
+			<br><br><a href = "resume.html" target="_blank"> <span style="font-weight: bold; font-size: 20px; color: #b51414"> Resume </span></a>
+
+
+			</p>	
+
 		</div>
 	</div>
 
-	
-	<div class="pagecont">
-	<div class="container" style="max-width: 1000px; ">
-		
-
-	<div class="thumbs_wrapper" >
-	<div class="picss">
-		<img class="contactpic" src="assets/img/pfp2.png" width ="300px" > 
-		<h1 class="ml6">
-		  <span class="text-wrapper">
-		    <span class="letters">welcome!</span>
-		  </span>
-		</h1>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+	</div> 
 	</div>
-	<div class="picss">
-		<p class="description_txt" style="margin-top: 0;"> Hello! My name is Anissa (she/her) and I'm currently studying Data Science and Economics at UC Berkeley. I'm an aspiring designer and believe in building research-driven and community-based experiences.
-
-		 <br><br> My education has given me a multidisciplinary foundation in statistics, programming, and economics, while also granting me the freedom to explore design. I've always been a creatively inclined person, leaning towards art and <a href="http://www.baremagazine.org/mine" target="_blank"> photography</a> a form of expression and as a way to represent my communities. After taking my first <a href="az.html" target="_blank" > web design course,</a> I've found design to be the optimal intersection between my technical and creative interests. Through coursework, student organizations, and personal projects, I've been able to gain experience in visual design, branding, creative direction, and product design. 
-
-		<br><br> In my free time, I enjoy brewing coffee, taking care of my house plants, and finding new music via the <a href="https://open.spotify.com/user/anissarashid?si=TwCAnM2VQwqsE9DBxpDFXA" target="_blank"> Spotify </a> related artists tab. I'm always looking for opportunities to grow and develop as a designer, if any of the above is of interest please feel free to reach out to me at <a href="mailto: anissarashid@berkeley.edu"> anissarashid@berkeley.edu! </a>
-		
-		<br><br><a href = "assets/img/anissarashid_resume.pdf" target="_blank"> <span style="font-weight: bold; font-size: 20px; color: #b51414"> Resume </span></a>
-
-
-		</p>	
-
-	</div>
-</div>
-
-</div> 
-</div>
 	
 <div class="center-con">
 	<div class="round" >
