--- a/graphics.html
+++ b/graphics.html
@@ -20,7 +20,7 @@
 				<div class="col1">
 					<a href="index.html" class="side"> Work </a>
 				</div>
-				<div id="col2">
+				<div class="col2">
 					<a href = "his.html" class="sidebar_item"> His Pills </a>	
 					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 					<a href = "misc.html" class="sidebar_item"> BARE </a>
@@ -31,13 +31,16 @@
 				</div>
 				
 			</div>	
-			<a href = "contact.html" class="contact"> About </a>
-			<a href = "resume.html" class="contactt" > Resume </a>
+			<div class="box1">
+				<a href = "contact.html" class="contact"> About </a>
+				<a href = "resume.html" class="contact" > Resume </a>	
+			</div>
+			
 		</div>
 	</div>
 
 	<div class="pagecont">
-	<div class="container" style="max-width: 950px">
+	<div class="container" style="max-width: 950px; width: 100%;">
 		<p class="dTitle"> Graphics </p>
 		<div class="description">
 			<p class="description_txt"> A collection of my work in Adobe Illustrator and Photoshop.
