--- a/his.html
+++ b/his.html
@@ -31,7 +31,7 @@
 				<div class="col1">
 					<a href="index.html" class="side"> Work </a>
 				</div>
-				<div id="col2">
+				<div class="col2">
 					<a href = "his.html" class="sidebar_item"> His Pills </a>	
 					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 					<a href = "misc.html" class="sidebar_item"> BARE </a>
@@ -42,8 +42,11 @@
 				</div>
 				
 			</div>	
-			<a href = "contact.html" class="contact"> About </a>
-			<a href = "resume.html" class="contactt" > Resume </a>
+			<div class="box1">
+				<a href = "contact.html" class="contact"> About </a>
+				<a href = "resume.html" class="contact" > Resume </a>	
+			</div>
+			
 		</div>
 	</div>
 
@@ -58,7 +61,7 @@
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Sketching and Ideation </span> </p>
-		<div class="pics" id="his" style="width: 800px;" >
+		<div class="pics" id="his">
 			<img class="portpics" src="assets/img/his1.png" height ="200px" >
 			<img class="portpics" src="assets/img/his2.png" height="200px" >
 			<img class="portpics" src="assets/img/his3.png" height="200px" >
