--- a/az.html
+++ b/az.html
@@ -21,7 +21,7 @@
 				<div class="col1">
 					<a href="index.html" class="side"> Work </a>
 				</div>
-				<div id="col2">
+				<div class="col2">
 					<a href = "his.html" class="sidebar_item"> His Pills </a>	
 					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 					<a href = "misc.html" class="sidebar_item"> BARE </a>
@@ -32,8 +32,11 @@
 				</div>
 				
 			</div>	
-			<a href = "contact.html" class="contact"> About </a>
-			<a href = "resume.html" class="contactt" > Resume </a>
+			<div class="box1">
+				<a href = "contact.html" class="contact"> About </a>
+				<a href = "resume.html" class="contact" > Resume </a>	
+			</div>
+			
 		</div>
 	</div>
 
