--- a/exhale.html
+++ b/exhale.html
@@ -20,7 +20,7 @@
 				<div class="col1">
 					<a href="index.html" class="side"> Work </a>
 				</div>
-				<div id="col2">
+				<div class="col2">
 					<a href = "his.html" class="sidebar_item"> His Pills </a>	
 					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 					<a href = "misc.html" class="sidebar_item"> BARE </a>
@@ -28,11 +28,12 @@
 					<a href = "papaya.html" class="sidebar_item"> Papaya </a>
 					<a href = "graphics.html" class="sidebar_item"> Graphics </a>	
 					
-				</div>
-				
+				</div>		
 			</div>	
-			<a href = "contact.html" class="contact"> About </a>
-			<a href = "resume.html" class="contactt" > Resume </a>
+			<div class="box1">
+				<a href = "contact.html" class="contact"> About </a>
+				<a href = "resume.html" class="contact" > Resume </a>	
+			</div>
 		</div>
 	</div>
 
@@ -47,7 +48,6 @@
 		<p class="description_txt"> <span class= "boldwrd"> Sketch: </span> </p>
 		<div class="pics">
 			<img class="portpics" src="assets/img/circle.png" width="225px" >
-	
 			<p class="description_txt_1"> My initial thought was to create a circle expanded and contracted to the rhythm of a breath that looked like the picture above. </p>
 		</div>
 		
