--- a/misc.html
+++ b/misc.html
@@ -20,19 +20,19 @@
 				<div class="col1">
 					<a href="index.html" class="side"> Work </a>
 				</div>
-				<div id="col2">
+				<div class="col2">
 					<a href = "his.html" class="sidebar_item"> His Pills </a>	
 					<a href = "exhale.html" class="sidebar_item"> Exhale </a>	
 					<a href = "misc.html" class="sidebar_item"> BARE </a>
 					<a href = "light.html" class="sidebar_item"> Lightning McQueen </a>	
 					<a href = "papaya.html" class="sidebar_item"> Papaya </a>
-					<a href = "graphics.html" class="sidebar_item"> Graphics </a>	
-					
-				</div>
-				
+					<a href = "graphics.html" class="sidebar_item"> Graphics </a>		
+				</div>	
 			</div>	
-			<a href = "contact.html" class="contact"> About </a>
-			<a href = "resume.html" class="contactt" > Resume </a>
+			<div class="box1">
+				<a href = "contact.html" class="contact"> About </a>
+				<a href = "resume.html" class="contact" > Resume </a>	
+			</div>
 		</div>
 	</div>
 
