--- a/exhale.html
+++ b/exhale.html
@@ -47,7 +47,9 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Sketch: </span> </p>
 		<div class="pics">
-			<img class="portpics" src="assets/img/circle.png" width="225px" >
+			<img class="portpics" src="assets/img/plswork.png" width="300px" >
+			<img class="portpics" src="assets/img/inhale2.png" width="300px" >
+			<img class="portpics" src="assets/img/circle.png" width="300px" >
 			<p class="description_txt_1"> My initial thought was to create a circle expanded and contracted to the rhythm of a breath that looked like the picture above. </p>
 		</div>
 		
