--- a/light.html
+++ b/light.html
@@ -45,7 +45,8 @@
 		<div class="description">
 			<p class="description_txt"> As a project for Prototyping and Fabrication, my team partner and I were prompted to build a bluetooth motorized chassis. This course taught skills in designing, prototyping, and fabricating for physical objects, including 2D and 3D modeling and fabrication, basic electronics, lasercutting, and 3D printing. <br> 
 			<br> <span style="font-weight: 600;"> Timeline: </span> 4 weeks - Summer 2019 
-			<br> <span style="font-weight: 600;"> Design Challenge: </span> Create a bluetooth motorized chassis. <br>  </p>
+			<br> <span style="font-weight: 600;"> Design Challenge: </span> Build a bluetooth motorized chassis. 
+			<br> <span style="font-weight: 600;"> Team: </span> Diana Fan <br>  </p>
 			
 		</div>
 
