--- a/papaya.html
+++ b/papaya.html
@@ -59,12 +59,14 @@
 			<br> View our full project <a href="https://www.behance.net/gallery/102421787/papaya" target="_blank"> here. </a>
   
 				<br> <br>
-				<span style="font-weight: 600;"> Timeline: </span> 6 weeks - Summer 2020 (DES INV 190, Design and Cybersecurity) <br> <span style="font-weight: 600;"> Design challenge: </span> How might we identify and improve cybersecurity in smart cities? 
+				<span style="font-weight: 600;"> Timeline: </span> 6 weeks - Summer 2020 (DES INV 190, Design and Cybersecurity) 
+				<br> <span style="font-weight: 600;"> Design challenge: </span> How might we identify and improve cybersecurity in smart cities?
+				<br> <span style="font-weight: 600;"> Team: </span> Daisy Lu, Ryan Steffens, Charlie Xiao
 			</p>	
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Background and Context </span> </p>
-		<div class="pics" id="his" style="width: 800px;" >
+		<div class="pics" id="his" >
 			
 			<p class="description_txt_1"> Smart cities use Internet of Things devices and sensors to collect data, which is then used to inform models and algorithms that will improve operations in the city. While these technologies are implemented to improve the quality of life that residents experience, massive data collection comes with many security and privacy threats. Unencrypted IoT devices in homes and hospitals, automated busses, power grids and water treatment plants, drones, and more all have major vulernabilities to hackers and user privacy threats.
 			</p>
