--- a/exhale.html
+++ b/exhale.html
@@ -42,7 +42,10 @@
 		<p class="dTitle">Exhale</p>
 		<div class="description">
 			<p class="description_txt"> As a project for Visual Thinking (Fall 2019), I created this simple site as a response to our prompt of creating a distributable, nondiscrete piece of art. 
-				<br> After thinking about the types of distributable products I could create, I noticed that mental health on college campuses is often neglected, so I wanted to design a website to target one facet of this complex issue. I decided to build a website with a breathing activity, which I saw as a potential solution to help reduce some of the stress students experience, and wanted to ensure that this resource was accessible and intuitive to use.  
+				<br> After thinking about the types of distributable products I could create, I noticed that mental health on college campuses is often neglected, so I wanted to design a website to target one facet of this complex issue. I decided to build a website with a breathing activity, which I saw as a potential solution to help reduce some of the stress students experience, and wanted to ensure that this resource was accessible and intuitive to use.  <br>
+				<br> <span style="font-weight: 600;"> Timeline: </span> 4 weeks - Fall 2019
+				<br> <span style="font-weight: 600;"> Design Challenge: </span> Create a nondiscrete, distributable piece of art. 
+				<br> <span style="font-weight: 600;"> Team: </span> Reese Gyllenhammer <br>
 		</div>
 
 		<p class="description_txt"> <span class= "boldwrd"> Sketch: </span> </p>
