--- a/his.html
+++ b/his.html
@@ -25,7 +25,7 @@
 	<div id="bothmenu">
 		<div class="rightmenu">
 		<a href= "index.html" class="name"> 
-			<img id = "logo" src="assets/img/logogreen-06.png" height="80px" width="80px" >
+			<p id="logo"> anissa rashid </p>
 		</a>
 		</div>
 
