--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<p class="boldwrd" style="text-align: center; z-index: 3;"> <span class="euro" style="font-size: 40px;"> anissa rashid</span> 
 			<br> <span class="euro">is a multidisciplinary designer studying 
 			<br>
-			Data Science, Economics, and Design at UC Berkeley.</span> </p>
+			Data Science, Economics, and Design at UC Berkeley.</span> <br> <br></p>
 			<div class="thumbs_wrapper">
 
 				<div class="picss">
